--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
                 <a routerLink="auth-login" class="btn btn-icon bg-green-600 hover:bg-green-700 border-green-600 dark:border-green-600 text-white rounded-full"><i data-feather="user" class="h-4 w-4 stroke-[3]"></i></a>
             </li> -->
             <li class="sm:inline ps-1 mb-0 hidden">
-                <a routerLink="auth-signup" class="btn bg-[#a5be00] hover:bg-lime-600 border-[#a5be00] text-white rounded-full">Contáctanos</a>
+                <a routerLink="/" class="btn bg-[#a5be00] hover:bg-lime-600 border-[#a5be00] text-white rounded-full">Contáctanos</a>
             </li>
         </ul>
         <!--Login button End-->
