Avance de inicio

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,8 +36,8 @@
             <!-- <li class="inline mb-0">
                 <a routerLink="auth-login" class="btn btn-icon bg-green-600 hover:bg-green-700 border-green-600 dark:border-green-600 text-white rounded-full"><i data-feather="user" class="h-4 w-4 stroke-[3]"></i></a>
             </li> -->
-            <li class="sm:inline ps-1 mb-0 hidden">
-                <a routerLink="/" class="btn bg-[#a5be00] hover:bg-lime-600 border-[#a5be00] text-white rounded-full">Contáctanos</a>
+            <li class="sm:inline ps-1 mb-0 hidden" >
+                <button (click)="openContact()" class="btn bg-[#a5be00] hover:bg-lime-600 border-[#a5be00] text-white rounded-full">Contáctanos</button>
             </li>
         </ul>
         <!--Login button End-->
@@ -53,9 +53,9 @@
                         <li><a routerLink="/fabrica-de-software" class="sub-menu-item">Fabrica de Software</a></li>
                         <li><a routerLink="/calidad-de-software" class="sub-menu-item">Calidad de Software</a></li>
                         <li><a routerLink="/consultoria-y-servicios-profesionales" class="sub-menu-item">Consultoria y Servicios Profesionales</a></li>
-                        <li><a routerLink="/index-four" class="sub-menu-item">Apps</a></li>
-                        <li><a routerLink="/index-five" class="sub-menu-item">Desarrollo</a></li>
-                        <li><a routerLink="/index-six" class="sub-menu-item">Soporte TI</a></li>
+                        <li><a routerLink="/apps" class="sub-menu-item">Apps</a></li>
+                        <li><a routerLink="/develope" class="sub-menu-item">Desarrollo</a></li>
+                        <li><a routerLink="/soporte-ti" class="sub-menu-item">Soporte TI</a></li>
                     </ul>
                 </li>
                 <li><a routerLink="/" class="sub-menu-item">Soluciones</a></li>
