--- a/src/app/pages/index/index/index.component.scss
+++ b/src/app/pages/index/index/index.component.scss
@@ -36,3 +36,8 @@
 .service-section {
   background-image: url("../../../../assets/img/index/service-section-bg.png");
 }
+
+.smart-section {
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(208,230,242,1) 40%, rgba(226,239,247,1) 60%, rgba(255,255,255,1) 100%);
+}
