--- a/src/app/pages/index/index/index.component.html
+++ b/src/app/pages/index/index/index.component.html
@@ -62,12 +62,116 @@
     </div>
 </section>
 
-<section class="container">
-    <div class="service-section">
 
-sadsadsadsa
+
+
+<section class="container relative smart-section py-8 my-16 flex">
+    <div class="flex flex-col gap-4 p-3 w-1/2 justify-center">
+        <h4 class="text-2xl">SOLUCIONES</h4>
+        <img src="https://smart.materiagris.pe/assets/svg/logo.svg" alt="" width="250">
+        <h5 class="text-3xl font-semibold">
+            Lleva a tu equipo al siguiente nivel
+        </h5>
+        <p>
+            Optimiza la gestión de empleados ahorrando tiempo, esfuerzo y dinero.
+        </p>
+
+        <a class="text-white rounded-full bg-lime-500 block w-max px-4 py-2">
+            Ir a la solucion <i class="uil uil-arrow-circle-right me-2 text-white"></i>
+        </a>
+    </div>
+    <div class="w-1/2">
+        <img src="assets/img/index/smart-web.png" alt="">
+    </div>
+</section>
+
+<!-- <div class="relative">
+    <div class="shape overflow-hidden z-1 text-white dark:text-slate-900">
+        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 0H1437.5H2880V48H2160C1442.5 -4 720 48 720 48H0V0Z" fill="white" fill-rule="evenodd"></path>
+        </svg>
+    </div>
+</div> -->
+
+<section class="container">
+    <div class="service-section rounded-3xl p-4 md:p-8 text-white flex items-center flex-col">
+        <h4 class="text-2xl">¿Qué dicen <strong>nuestros clientes</strong>?</h4>
+        <p>Facilitamos el dia a dia de pérsonas y empresas mediante la creacion de tecnología web y móvil.</p>
+
+        <div class="flex justify-center relative mt-4">
+            <div class="relative lg:w-1/3 md:w-1/2 w-full">
+    
+                <!-- <div class="tiny-single-item">
+                    <div *ngFor="let item of clientData" class="tiny-slide bg-white">
+                        <div class="text-center">
+                            <p class="text-xl text-slate-400 italic">{{item.desc}}</p>
+    
+                            <div class="text-center mt-5">
+                                <ul class="text-xl font-medium text-amber-400 list-none mb-2">
+                                    <li class="inline"><i class="mdi mdi-star"></i></li>
+                                    <li class="inline"><i class="mdi mdi-star"></i></li>
+                                    <li class="inline"><i class="mdi mdi-star"></i></li>
+                                    <li class="inline"><i class="mdi mdi-star"></i></li>
+                                    <li class="inline"><i class="mdi mdi-star"></i></li>
+                                </ul>
+    
+                                <img [src]="item.image" class="h-14 w-14 rounded-full shadow-md dark:shadow-gray-700 mx-auto" alt="">
+                                <h6 class="mt-2 fw-semibold">{{item.name}}</h6>
+                                <span class="text-slate-400 text-sm">{{item.title}}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div><!--end grid-->
     </div>
 
+</section>
+
+<section class="container flex flex-col gap-4 items-center py-16">
+    <h4 class="text-2xl font-semibold text-[#05668d]">NUESTROS <strong>PARTNERS</strong></h4>
+    <div class="flex gap-4">
+        <img src="assets/img/index/partner-aws-2.png" alt="" width="250" height="250">
+        <img src="assets/img/index/partner-stela-2.png" alt="" width="250" height="250">
+        <img src="assets/img/index/partner-azure-2.png" alt="" width="250" height="250">
+    </div>
+
+</section>
+
+<section class="container flex gap-4 py-16">
+    <div class="w-1/2 rounded-2xl overflow-hidden">
+        <iframe class="max-w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.056754726162!2d-77.0286312240271!3d-12.10826724305078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81330b89749%3A0xbb5f81a9f254ae35!2sProtecta%20Security!5e0!3m2!1ses!2spe!4v1708289321213!5m2!1ses!2spe" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="w-1/2 flex flex-col gap-2 justify-center px-2 md:px-6">
+        <h4 class="text-2xl font-semibold text-[#05668d]">Encuentranos aquí</h4>
+        <div class="flex mt-6">
+            <i class="mdi mdi-map-marker w-6 h-6 text-[#05668d] me-3"></i>
+            <div class="">
+                <span class="mb-2">Avenida Domingo Orué 165, Surquillo, Lima, Perú</span>
+            </div>
+        </div>
+
+        <div class="flex mt-4">
+            <i class="mdi mdi-email w-6 h-6 text-[#05668d] me-3"></i>
+            <div class="">
+                <span class="duration-500 ease-in-out">contacto&#64;materiagris.pe</span>
+            </div>
+        </div>
+
+        <div class="flex mt-4">
+            <i class="mdi mdi-phone w-6 h-6 text-[#05668d] me-3"></i>
+            <div class="">
+                <span class="duration-500 ease-in-out">(01) 680 8800</span>
+            </div>
+        </div>
+
+        <div class="flex mt-4">
+            <i class="mdi mdi-whatsapp w-6 h-6 text-[#05668d] me-3"></i>
+            <div class="">
+                <span class="duration-500 ease-in-out">(+51) 949 645 965</span>
+            </div>
+        </div>
+    </div>
 </section>
 
 <app-footer></app-footer>
