--- a/src/app/pages/utility/team/team.component.html
+++ b/src/app/pages/utility/team/team.component.html
@@ -42,9 +42,9 @@
     </div>
 
     <div class="container flex justify-center pt-16">
-        <button class="rounded-full shadow-md px-4 py-2 bg-[#a5be00] text-white" [routerLink]="['/index']" routerLinkActive="router-link-active">
-            <span>Trabaja con nosotros  </span> <i class="uil uil-arrow-up-right"></i>
-        </button>
+        <a class="rounded-full shadow-md px-4 py-2 bg-[#a5be00] text-white block" target="_blank" href="https://www.linkedin.com/company/materia-gris---consultor%C3%ADa-tecnol%C3%B3gica/jobs/">
+            Trabaja con nosotros  <i class="uil uil-arrow-up-right"></i>
+        </a>
     </div>
 
 </section>
