--- a/src/app/components/contact-modal/contact-modal.component.html
+++ b/src/app/components/contact-modal/contact-modal.component.html
@@ -1,3 +1,65 @@
-<h1>My Dialog</h1>
-<p>This is the content of my dialog.</p>
-<button mat-button (click)="closeDialog()">Close</button>
+    <div class="lg:col-span-5 md:col-span-6">
+
+            <div class="flex gap-4">
+                <div class="bg-[url('https://cdn.selldone.com/app/contents/articles/220110bestfreeappbuilderjpg8247ba92ec09174252cd2a9c7aecfc47.jpg')] bg-no-repeat bg-center bg-cover rounded-2xl p-4 flex items-end">
+                    <div class="w-full p-2 bg-cyan-800 flex flex-col gap-2 rounded-2xl">
+                        <div class="flex">
+                            <i class="mdi mdi-map-marker w-6 h-6 text-[#a5be00] me-2"></i>
+                            <div class="">
+                                <span class="text-gray-300">Avenida Domingo Orué 165, Surquillo, Lima, Perú</span>
+                            </div>
+                        </div>
+
+                        <div class="flex">
+                            <i class="mdi mdi-email w-6 h-6 text-[#a5be00] me-2"></i>
+                            <span class="text-slate-300 hover:text-slate-400 duration-500 ease-in-out">contacto&#64;materiagris.pe</span>
+                        </div>
+                
+                        <div class="flex">
+                            <i class="mdi mdi-phone w-6 h-6 text-[#a5be00] me-2"></i>
+                            <div class="">
+                                <span class="text-slate-300 hover:text-slate-400 duration-500 ease-in-out">(01) 680 8800</span>
+                            </div>
+                        </div>
+
+                        <div class="flex">
+                            <i class="mdi mdi-whatsapp w-6 h-6 text-[#a5be00] me-2"></i>
+                            <span class="text-slate-300 hover:text-slate-400 duration-500 ease-in-out">(+51) 949 645 965</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h3 class="mb-6 text-2xl leading-normal font-medium">Get in touch !</h3>
+        
+                    <form>
+                        <div class="grid lg:grid-cols-12 lg:gap-6">
+                            <div class="lg:col-span-6 mb-5">
+                                <label for="name" class="font-medium">Your Name:</label>
+                                <input name="name" id="name" type="text" class="form-input mt-2" placeholder="Name :">
+                            </div>
+        
+                            <div class="lg:col-span-6 mb-5">
+                                <label for="email" class="font-medium">Your Email:</label>
+                                <input name="email" id="email" type="email" class="form-input mt-2" placeholder="Email :">
+                            </div>
+                        </div>
+        
+                        <div class="grid grid-cols-1">
+                            <div class="mb-5">
+                                <label for="subject" class="font-medium">Your Question:</label>
+                                <input name="subject" id="subject" class="form-input mt-2" placeholder="Subject :">
+                            </div>
+        
+                            <div class="mb-5">
+                                <label for="comments" class="font-medium">Your Comment:</label>
+                                <textarea name="comments" id="comments" class="form-input mt-2 textarea" placeholder="Message :"></textarea>
+                            </div>
+                        </div>
+                        <button type="submit" id="submit" name="send" class="btn bg-green-600 hover:bg-green-700 text-white rounded-md">Send Message</button>
+                    </form>
+                </div>
+            </div>
+
+    </div>
+
