--- a/src/app/components/whatsapp-popup/whatsapp-popup.component.html
+++ b/src/app/components/whatsapp-popup/whatsapp-popup.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="fixed bottom-4 right-4 z-10 flex flex-col gap-6 items-end">
-    <div class="rounded-3xl overflow-hidden w-[350px] shadow-md" [class]="open ? 'opacity-100 duration-200 transition' : 'opacity-0 duration-200 transition'">
+    <div class="rounded-3xl overflow-hidden w-[350px] shadow-md" [class]="open ? 'opacity-100 duration-200 transition' : 'opacity-0 duration-200 transition !h-0 !w-0'">
         <div class="bg-[#095e54]">
             <div class="flex items-center gap-3 px-4 py-3">
                 <img class="w-11 h-11 rounded-full relative" src="https://media.licdn.com/dms/image/D560BAQFceYe0lEpF_Q/company-logo_200_200/0/1691103609983/materia_gris___consultora_tecnolgica_logo?e=1716422400&v=beta&t=qkxThcCUI3uBttcC3r7XXvWvzaAww6YuPrX9X62QnoY">
