--- a/src/app/pages/utility/team/team.component.html
+++ b/src/app/pages/utility/team/team.component.html
@@ -58,6 +58,8 @@
         <div class="bg-[#dfeef6] max-w-max px-4 py-1 rounded-full text-[#3d8aab]">
             <span>Gerencia de Operaciones</span>
         </div>
+
+        <ngx-org-chart [nodes]="nodes" direction="vertical"></ngx-org-chart>
     </div>
 </section>
 
@@ -100,4 +102,6 @@
         </div>
     </div>
 </section> -->
+
+
 <app-footer/>
