--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="lg:ms-4 text-white p-4">
-                <h4 class="mb-6 md:text-3xl text-2xl lg:leading-normal leading-normal">FILOSFÍA</h4>
+                <h4 class="mb-6 md:text-3xl text-2xl lg:leading-normal leading-normal">FILOSOFÍA</h4>
                 <p class="text-slate-400 max-w-xl">En cada proyecto, nos esforzamos por proporcionar un servicio de calidad excepcional con transparencia y comunicación abierta, 
                     asegurando que nuestros clientes estén informados y satisfechos en cada etapa del proceso. Además, nos mantenemos actualizados con las últimas 
                     tendencias y tecnologías de la industria para garantizar que nuestras soluciones y servicios sean eficientes, escalables y estén a la vanguardia.</p>
